tests/e2e/negative/n0003_missing_semicolon.cryo
// @test: missing_semicolon
// @expect: compile_fail
// @mode: raw
// @error_code: E0106
// @description: Missing semicolon should cause parse error
// @tags: syntax, errors

namespace NegSemicolon;

function main() -> int {
    const x: int = 5
    return 0;
}
